[package]
name = "blink-nano"
version = "0.1.0"
authors = ["Margo Sall <m4rg0.s4ll@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "blink-nano"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
embedded-hal = "1.0"
libfont = { path = "libfont" }
myssd1306 = { path = "myssd1306" }
# avr-progmem = "0.4.0"
# ssd1306 = { path = "ssd1306" }
# ssd1306 = "0.9.0"
[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-nano"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
# [build-dependencies.proc-macro2]
# version = "=1.0.92"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = "fat"
opt-level = "s"
